# vaultrun

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  go.mod  go.sum  vaultrun.code-workspace
.agents/plugins/: marketplace.json
.agents/skills/: vaultrun
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  pages.yml  pypi.yml  release.yml
apps/frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
apps/landing/: index.html
cmd/api/: e2e_test.go  enterprise_hooks.go  enterprise_stub.go  main.go  router.go
cmd/ci-runner/: config.go  github.go  handler.go  handler_test.go  main.go  notify.go  notify_test.go  runner.go  vaultrun.go
cmd/cli/: main.go
deployments/: Dockerfile.api  docker-compose.yml
docs/: architecture.md  ci-runner.md  configuration.md  demo-video-script.md  flowd-integration.md  index.html  launch-post.md  marketing-plan.md  mcp.md  multi-region.md  openapi.yaml  plugin-publish.md  roadmap.md  secrets.md  security.md  sso-setup.md
examples/: python_agent.py
examples/go_agent/: main.go
internal/artifacts/: local.go  s3.go  store.go  store_test.go
internal/audit/: audit.go
internal/auth/: auth.go  auth_test.go  coalesce_test.go
internal/cleanup/: cleanup.go
internal/config/: config.go  config_test.go
internal/db/: db.go  queries.go  ssl_test.go
internal/docker/: client.go  container.go  container_test.go  cosign.go  exec.go  netpolicy.go  netpolicy_test.go  types.go
internal/httputil/: safe_client.go  safe_client_test.go
internal/jobqueue/: callback_test.go  drain_test.go  queue.go  redis.go
internal/metrics/: metrics.go
internal/models/: models.go  role_test.go
internal/policy/: opa.go  opa_test.go  policy.go
internal/runner/: runner.go  runner_test.go
internal/secrets/: provider.go  provider_test.go  sigv4.go  sigv4_test.go
internal/siemexport/: exporter.go
internal/sso/: oidc.go  oidc_test.go  revoke.go  saml.go  saml_test.go  session.go  session_test.go
internal/warmpool/: pool.go
internal/workspace/: workspace.go  workspace_test.go
migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql  002_labels_async.down.sql  002_labels_async.up.sql  003_network_allowlist.down.sql  003_network_allowlist.up.sql  004_multitenancy.down.sql  004_multitenancy.up.sql  005_snapshots_artifacts.down.sql  005_snapshots_artifacts.up.sql  006_indices.down.sql  006_indices.up.sql  007_api_key_revoked_at.down.sql  007_api_key_revoked_at.up.sql  008_unique_api_key_name.down.sql  008_unique_api_key_name.up.sql  009_audit_sig.down.sql  009_audit_sig.up.sql  010_sso_users.up.sql
policy/: default.rego  restrictive.rego
scripts/: bootstrap.sh
sdk/go/: client.go  client_test.go
sdk/mcp/: README.md  aws.go  aws_lambda.go  aws_ssm.go  client.go  (+18 more)
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: autogen_agent.py  langchain_agent.py
sdk/python/sandbox_sdk/: __init__.py  client.py
sdk/python/tests/: test_client.py
site/: enterprise.html  flowd.html  index.html  llms-full.txt  llms.txt  nav.css  nav.js  robots.txt  sitemap.xml  use-cases.html
(+67 files in other folders)
