[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultrun-sdk"
version = "0.1.0"
description = "Python SDK for the VaultRun secure AI agent sandbox runtime"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = ["requests>=2.31.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "responses>=0.25"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sandbox_sdk*"]
