[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultrun-sdk"
version = "0.2.0"
description = "Python SDK for the VaultRun secure AI agent sandbox runtime"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = ["requests>=2.31.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]
keywords = ["ai-agents", "sandbox", "mcp", "docker", "security", "self-hosted"]

[project.urls]
Homepage = "https://vaultrun.dev"
Repository = "https://github.com/nickvd7/vaultrun"
Issues = "https://github.com/nickvd7/vaultrun/issues"
Changelog = "https://github.com/nickvd7/vaultrun/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8", "responses>=0.25"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sandbox_sdk*"]
